strona główna skończona

--- a/pbs/index.html
+++ b/pbs/index.html
@@ -7,6 +7,7 @@
         <meta name="keywords" content="klasówka, praca klasowa, test, sprawdzian, szkoła podstawowa, gimnazjum, szkoła średnia">
         <meta name="theme-color" content="#01579B">
         <link rel="stylesheet" href="styles/style.css" type="text/css">
+        <link href="https://cdn.jsdelivr.net/gh/arbati6/frino@1.0.1/frinostyle.min.css" rel="stylesheet">
         <link rel="icon" type="image/png" href="img/icon.png">
         <link href="https://fonts.googleapis.com/css?family=Oxygen|Source+Sans+Pro:300,300i,400,400i,600,700,900&amp;subset=latin-ext" rel="stylesheet">
     </head>
@@ -169,7 +170,7 @@
             <center><i><h2>Od uczniów dla uczniów!</h2></i></center>
             <p class="weight400">Strona ma na celu dzielenie się materiałami związanymi ze wszelkiego rodzaju sprawdzianami, kartkówkami, testami, itp. Ma za zadanie pomóc uczniom w jeszcze lepszym przygotowaniu do testu, aby mogli oni zyskiwać co raz to lepsze wyniki w nauce. Materiały dytaktyczne mogą się pokrywać z materiałami, które znajdziecie w szkole − w końcu podstawa programowa jest jedna. Rozdzielenie na poszczególne podręczniki ma za zadanie pomóc w kategoryzowaniu materiałów.</p>
         </section>
-            <img class="imgmain" src="img/pencils.jpg">
+            <img class="imgmain" src="img/kredki-szkoła-testy-sprawdziany-kartkówki.jpg" alt="Kredki">
         <section>
             <center><h2>Czego możesz oczekiwać?</h2></center>
             <ul class="mainpage">
@@ -180,22 +181,22 @@
                 <li>Gwarancja lepszych ocen po skorzystaniu ze strony <a href=".">sprawdzianik.pl</a> ☺</li>
             </ul>
         </section>
-            <img class="imgmain" src="img/blackboard.jpg">
+            <img class="imgmain" src="img/tablica-matematyka-szkoła-testy-sprawdziany-kartkówki.jpg" alt="Uczeń stojący przed matematyką na tablicy">
         <section>
             <center><h2>Koniec z bezcelowym zakuwaniem książek!</h2></center>
-            <p class="weight400">Po co uczyć się na sprawdziany z przedmiotów, które wiesz, że i tak się nie przydadzą Tobie w życiu? Korzystając z materiałów na tej stronie możesz przygotować się bezpośrednio na sprawdziany, wiedząc czego możesz się spodziewać. Koniec z nauką niepotrzebnych informacji. Koniec z niepotrzebnie poświęconymi godzinami nad książkami. Dzięki tej stronie to możliwe!</p>
+            <p class="weight400">Po co uczyć się na sprawdziany z przedmiotów, które wiesz, że i tak się nie przydadzą Tobie w życiu? Korzystając z materiałów na tej stronie możesz przygotować się bezpośrednio na testy, kartkówki bądź sprawdziany, wiedząc czego możesz się spodziewać. Koniec z nauką niepotrzebnych informacji. Koniec z niepotrzebnie poświęconymi godzinami nad książkami. Dzięki tej stronie to możliwe!</p>
         </section>
-            <img class="imgmain" src="img/quality.jpg">
+            <img class="imgmain" src="img/wysoka-jakość-strony-szkoła-testy-sprawdziany-kartkówki.jpg" alt="Wysoka jakość strony">
         <section>
-            <center><h2>Dlaczego akurat Masz skorzystać z tej strony?</h2></center>
-            <p class="weight400">Znajdziesz tutaj materiały wysokiej jakości, tworzone na podstawie istniejącej podstawy programowej i aktualnymi wymaganiami stawianymi przed uczniami. Treści aktualizowane są na bieżąco. Z czasem pojawiać się będzie więcej kartkówek, sprawdzianów, prac klasowych. Możesz pomóc w tworzeniu tej strony korzystając z maila znajdującego się na końcu każdej strony. Na pewno dzięki Twojej pomocy strona będzie szybciej wypełniona wysokiej jakości zawartością, przez co strona będzie bardziej pomocna uczniom.</p>
+            <center><h2>Dlaczego akurat ta strona?</h2></center>
+            <p class="weight400">Znajdziesz tutaj materiały wysokiej jakości, tworzone na podstawie istniejącej podstawy programowej i aktualnymi wymaganiami stawianymi przed uczniami. Treści aktualizowane są na bieżąco. Z czasem pojawiać się będzie więcej kartkówek, sprawdzianów, prac klasowych. Możesz pomóc w tworzeniu tej strony kontaktując się za pomocą maila znajdującego się na końcu każdej strony. Na pewno dzięki Twojej pomocy strona będzie szybciej wypełniona wysokiej jakości zawartością, przez co strona będzie bardziej pomocna uczniom.</p>
         </section>
-            <img class="imgmain" src="img/learn2.jpg">
+            <img class="imgmain" src="img/nigdy-nie-przestawaj-się-uczyć-nauka-szkoła-testy-sprawdziany-kartkówki.jpg" alt="Nie przestawaj się uczyć">
         <section>
             <center><h2>Bez wysiłków nie ma efektów!</h2></center>
             <p class="weight400">Niestety, bez przygotowania, dobrych ocen nie zdobędziesz. Wykonując testy znajdujące się na tej stronie, niezależnie od poziomu nauczania, masz okazje przygotować się do podobnych w szkole. To od Ciebie zależy ile poświęcisz czasu na naukę. Dzięki tej stronie na pewno zaoszczędzisz czas, który będziesz mógł uczniu poświęcić na inne czynności, np. wyjście ze znajomymi do kina, spędzić czas z rodziną i najbliższymi, lub po prostu pograć. Ważne, aby mimo niepowodzeń, masz się nie poddawać, przecież nie od razu Rzym zbudowano.</p>
         </section>
-            <img class="imgmain" src="img/blackboard2.jpg">
+            <img class="imgmain" src="img/nigdy-nie-poddawaj-się-szkoła-testy-sprawdziany-kartkówki.jpg" alt="Nigdy się nie poddawaj">
         <section>
             <center>
                 <h2>Czemu jeszcze jesteś na tej stronie?</h2>
@@ -203,11 +204,17 @@
                 <br><span class="bluespanmainsection2">dla Ciebie!</span></h2>
             </center>
         </section>
-
         <footer>
-            <a href="http://sprawdzianik.pl">sprawdzianik.pl</a> &copy; 2018
-            <br>Korzystanie ze strony <a href="http://sprawdzianik.pl">sprawdzianik.pl</a> jest dobrowolne. Serwis nie hostuje plików.
-            <br>Jeżeli masz jakieś uwagi, sugestie − <a id="mail" href="mailto:uwagi@sprawdzianik.pl">skontaktuj się z nami</a>. Dzięki za Twój wkład w tworzeniu strony! ☺
+            <aside>
+                <!-- Im wyżej tym bardziej lewej strony jest ikonka -->
+                <div id="fb"><a target="_blank" href="http://fb.me/sprawdzianikpl">&#xe867;</a></div>
+                <div id="maill"><a href="mailto:uwagi@sprawdzianik.pl">&#xe92f;</a></div>
+            </aside>
+            <div id="footer">
+                <a href="http://sprawdzianik.pl">sprawdzianik.pl</a> &copy; 2018
+                <br>Korzystanie ze strony <a href="http://sprawdzianik.pl">sprawdzianik.pl</a> jest dobrowolne. Serwis nie hostuje plików.
+                <br>Jeżeli masz jakieś uwagi, sugestie − <a id="mail" href="mailto:uwagi@sprawdzianik.pl">skontaktuj się z nami</a>. Dzięki za Twój wkład w tworzeniu strony! ☺
+            </div>
         </footer>
     </body>
 
