--- a/pbs/podstawowa/index.html
+++ b/pbs/podstawowa/index.html
@@ -4,11 +4,12 @@
     <title>Szkoła podstawowa | sprawdzianik.pl - Sprawdż się!</title>
     <meta name="description" content="Materiały przeznaczone do szkoły podstawowej. Począwszy od klas pierwszych, do klas ósmych.">
     <meta name="author" content="Wieszym">
-    <meta name="keywords" content="szkoła  podstawówka,  klasa siódma, klasa ósma, klasa szósta, klasa piąta, klasa czwarta, klasa trzecia, klasa druga, klasa pierwsza">
+    <meta name="keywords" content="szkoła, podstawówka, szkoła podstawowa, klasa siódma, klasa ósma, klasa szósta, klasa piąta, klasa czwarta, klasa trzecia, klasa druga, klasa pierwsza">
     <meta name="theme-color" content="#01579B">
     <link rel="stylesheet" href="../styles/style.css" type="text/css">
+    <link href="https://cdn.jsdelivr.net/gh/arbati6/frino@1.0.1/frinostyle.min.css" rel="stylesheet">
     <link rel="icon" type="image/png" href="../img/icon.png">
-        <link href="https://fonts.googleapis.com/css?family=Oxygen|Source+Sans+Pro:300,300i,400,400i,600,700,900&amp;subset=latin-ext" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oxygen|Source+Sans+Pro:300,300i,400,400i,600,700,900&amp;subset=latin-ext" rel="stylesheet">
 </head>
 
 <body>
@@ -168,8 +169,8 @@
        </ol>
     </nav>
     <section>
-        <center><embed src="../img/szkoła-svg" type="image/svg+xml"/></center>
-        <p>Jest to pierwszy główny etap edukacji. W Polsce jest on obowiązkowy. W podstawie programowej możemy przeczytać o nim tak:</p>
+        <center><embed src="../img/szkola-podstawowa.svg" type="image/svg+xml"/></center>
+        <p>Pierwszy główny etap edukacji. W Polsce jest on obowiązkowy. W podstawie programowej możemy przeczytać o nim tak:</p>
         <blockquote><p>Kształcenie w szkole podstawowej stanowi fundament wykształcenia. Zadaniem szkoły jest łagodne wprowadzenie dziecka w świat wiedzy, przygotowanie do wykonywania obowiązków ucznia oraz wdrażanie do samorozwoju. Najważniejszym celem kształcenia w szkole podstawowej jest dbałość o integralny rozwój biologiczny, poznawczy, emocjonalny, społeczny i moralny ucznia. </p>
         <br><div id=italicquote>Rozporządzenie Ministra Edukacji Narodowej z dnia 14 lutego 2017 r., strona 11.</div></blockquote>
         <br><h2>I etap edukacyjny</h2>
@@ -196,8 +197,15 @@
     </section>
 
     <footer>
-        <a href="http://sprawdzianik.pl">sprawdzianik.pl</a> &copy; 2018
-        <br>Korzystanie ze strony <a href="http://sprawdzianik.pl">sprawdzianik.pl</a> jest dobrowolne. Serwis nie hostuje plików.
+        <aside>
+            <div id="fb"><a target="_blank" href="http://fb.me/sprawdzianikpl">&#xe867;</a></div>
+            <div id="maill"><a href="mailto:uwagi@sprawdzianik.pl">&#xe92f;</a></div>
+        </aside>
+        <div id="footer">
+            <a href="http://sprawdzianik.pl">sprawdzianik.pl</a> &copy; 2018
+            <br>Korzystanie ze strony <a href="http://sprawdzianik.pl">sprawdzianik.pl</a> jest dobrowolne. Serwis nie hostuje plików.
+            <br>Jeżeli masz jakieś uwagi, sugestie − <a id="mail" href="mailto:uwagi@sprawdzianik.pl">skontaktuj się z nami</a>. Dzięki za Twój wkład w tworzeniu strony! ☺
+        </div>
     </footer>
 </body>
 
