--- a/pbs/podstawowa/vii/historia/index.html
+++ b/pbs/podstawowa/vii/historia/index.html
@@ -1,7 +1,7 @@
 <html lang="pl">
     <head>
         <meta charset="utf-8"> 
-        <title>sprawdzianik.pl - Sprawdż się!</title>
+        <title>Historia klasa siódma | sprawdzianik.pl - Sprawdż się!</title>
         <meta name="description" content="Znajdziesz tutaj materiały, które przydadzą się Tobie w szkole.">
         <meta name="author" content="Szymon Mączyński">
         <link rel="stylesheet" href="../../../styles/style.css" type="text/css">
@@ -192,10 +192,16 @@
             </div></a>
             <div style="clear:both"></div>
         </div>
-
         <footer>
-            <a href="http://sprawdzianik.pl">sprawdzianik.pl</a> &copy; 2018
-            <br>Korzystanie ze strony <a href="http://sprawdzianik.pl">sprawdzianik.pl</a> jest dobrowolne. Serwis nie hostuje plików.
+            <aside>
+                <div id="fb"><a target="_blank" href="http://fb.me/sprawdzianikpl">&#xe867;</a></div>
+                <div id="maill"><a href="mailto:uwagi@sprawdzianik.pl">&#xe92f;</a></div>
+            </aside>
+            <div id="footer">
+                <a href="http://sprawdzianik.pl">sprawdzianik.pl</a> &copy; 2018
+                <br>Korzystanie ze strony <a href="http://sprawdzianik.pl">sprawdzianik.pl</a> jest dobrowolne. Serwis nie hostuje plików.
+                <br>Jeżeli masz jakieś uwagi, sugestie − <a id="mail" href="mailto:uwagi@sprawdzianik.pl">skontaktuj się z nami</a>. Dzięki za Twój wkład w tworzeniu strony! ☺
+            </div>
         </footer>
     </body>
 
