--- a/ch/index.html
+++ b/ch/index.html
@@ -6,10 +6,10 @@
     </head>
     <body>
         <a href="#"><div id="startleft">
-            <span>Parafia</span>
+            <span class="tekst">Parafia</span>
         </div></a>
         <a href="#"><div id="startright">
-            Cmentarz
+            <span class="tekst">Cmentarz</span>
         </div></a>
     </body>
 </html>
