--- a/fbg/index.html
+++ b/fbg/index.html
@@ -7,7 +7,7 @@
         <!-- <audio autoplay>
             <source src= "sound/fristajlo.mp3" type="audio/mpeg">
         </audio> -->
-        <canvas id="canvas" width="288" height="512"></canvas>
+        <center><canvas id="canvas" width="288" height="512"></canvas></center>
         <script src="script.js"></script>
     </body>
 </html>
