--- a/fbg/index.html
+++ b/fbg/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="style.css" />
-        <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css?family=Lato:300" rel="stylesheet"> 
     </head>
     <body>
@@ -10,7 +10,7 @@
         <center><canvas id="canvas" width="288" height="512"></canvas>
         <br> <button id="Start">START</button>
         <script src="script.js"></script>
-        <br><a id = "Music" href="https://www.youtube.com/watch?v=kOROsJyNqrA">Soundtrack</a></center>
+        <br><a id = "Music" href="https://www.youtube.com/watch?v=kOROsJyNqrA">Soundtrack</a><span id="Music"> | </span><a id="Music" href="https://www.youtube.com/watch?v=aWIE0PX1uXk">Sad Music</a></center>
         <footer>
             Wieszym &copy; 2018
             <br>Projekt zrobiony w klasie pierwszej na zajęciach prowadzonych przez firmę <a href="https://spartez.com/">Spartez</a> w <a href="http://www.zsl.gda.pl/">Zespole Szkół Łączności</a>.
